--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@nuxt/eslint": "^1.7.1",
     "@nuxt/icon": "^1.15.0",
     "@nuxt/image": "^1.11.0",
+    "@prisma/nuxt": "^0.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "@vueuse/core": "^13.6.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.32.0",
+    "install": "^0.13.0",
     "lucide-vue-next": "^0.539.0",
+    "npm": "^11.5.2",
     "nuxt": "^3.17.7",
     "reka-ui": "^2.4.1",
     "shadcn-nuxt": "^2.2.0",
@@ -26,7 +30,8 @@
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.2"
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.2.2",
