--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
+    "validator": "^13.15.15",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.2"
