--- a/package.json
+++ b/package.json
@@ -4,34 +4,31 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev -p 4000",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@nuxt/eslint": "^1.7.1",
-    "@nuxt/icon": "^1.15.0",
+    "@neondatabase/serverless": "^1.0.1",
+    "@nuxt/eslint": "^1.8.0",
     "@nuxt/image": "^1.11.0",
-    "@prisma/nuxt": "^0.3.0",
-    "@tailwindcss/vite": "^4.1.11",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@tailwindcss/vite": "^4.1.12",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.6.0",
-    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "^9.32.0",
-    "install": "^0.13.0",
+    "drizzle-orm": "^0.44.4",
+    "eslint": "^9.33.0",
     "lucide-vue-next": "^0.539.0",
-    "npm": "^11.5.2",
-    "nuxt": "^3.17.7",
+    "nuxt": "^3.18.1",
     "reka-ui": "^2.4.1",
     "shadcn-nuxt": "^2.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.6",
-    "validator": "^13.15.15",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
@@ -39,9 +36,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@iconify-json/radix-icons": "^1.2.2",
-    "@iconify/vue": "^5.0.0",
-    "@nuxtjs/color-mode": "^3.5.2",
+    "drizzle-kit": "^0.31.4",
     "typescript": "^5.9.2"
   }
 }
