--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -p 4000",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -18,10 +18,12 @@
     "@tailwindcss/vite": "^4.1.12",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.6.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.4",
     "eslint": "^9.33.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-vue-next": "^0.539.0",
     "nuxt": "^3.18.1",
     "reka-ui": "^2.4.1",
@@ -36,6 +38,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "drizzle-kit": "^0.31.4",
     "typescript": "^5.9.2"
   }
