--- a/package.json
+++ b/package.json
@@ -4,42 +4,30 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev -p 4000",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^0.8.2",
-    "@neondatabase/serverless": "^1.0.1",
-    "@nuxt/eslint": "^1.8.0",
+    "@nuxt/eslint": "^1.9.0",
     "@nuxt/image": "^1.11.0",
-    "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.12",
-    "@vee-validate/zod": "^4.15.1",
-    "@vueuse/core": "^13.6.0",
-    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.44.4",
     "eslint": "^9.33.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-vue-next": "^0.539.0",
+    "lucide-vue-next": "^0.540.0",
     "nuxt": "^3.18.1",
     "reka-ui": "^2.4.1",
     "shadcn-nuxt": "^2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
-    "tw-animate-css": "^1.3.6",
-    "vee-validate": "^4.15.1",
+    "tw-animate-css": "^1.3.7",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1",
-    "vue-sonner": "^2.0.2",
-    "zod": "^3.25.76"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.10",
-    "drizzle-kit": "^0.31.4",
+    "@nuxtjs/color-mode": "^3.5.2",
     "typescript": "^5.9.2"
   }
 }
